tests/fixtures/invalid/invalid-uuid-format.mobileconfig
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
	<key>PayloadContent</key>
	<array>
		<dict>
			<key>PayloadDisplayName</key>
			<string>Dock Settings</string>
			<key>PayloadIdentifier</key>
			<string>com.example.dock</string>
			<key>PayloadType</key>
			<string>com.apple.dock</string>
			<key>PayloadUUID</key>
			<string>not-a-valid-uuid</string>
			<key>PayloadVersion</key>
			<integer>1</integer>
		</dict>
	</array>
	<key>PayloadDisplayName</key>
	<string>Invalid UUID Profile</string>
	<key>PayloadIdentifier</key>
	<string>com.example.profile.baduuid</string>
	<key>PayloadType</key>
	<string>Configuration</string>
	<key>PayloadUUID</key>
	<string>12345678-1234-1234-1234-123456789012</string>
	<key>PayloadVersion</key>
	<integer>1</integer>
</dict>
</plist>
